# grace-CLLM-deploy

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  GrACE-User-Manual.md  INSTALL.md  README.md  alembic.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  secret-scan.yml
alembic/: env.py
alembic/versions/: 0c1f118c07c6_create_processed_documents_table.py  2f29ad55b099_create_ontology_management_tables.py  658d756882d4_create_schema_extraction_runs_table.py  859adb0e4f83_create_cq_test_runs_table.py  896c59ca3fc6_create_review_session_tables.py  a1b2c3d4e5f6_create_entity_resolution_log_and_add_resolution_fields.py  a1f2c8d3e9b7_create_elicitation_events_table.py  a3b7c9d1e2f4_create_graph_schema_syncs_table.py  b2c3d4e5f6a7_add_subject_object_type_to_extraction_claims.py  b4e7a291cd5f_rename_actor_type_pass_to_system.py  b597cf975518_add_merge_fields_to_cq_clusters_and_.py  c29a_elicitation_sessions.py  c29b_cq_candidates.py  c30_extraction_claims_human_decided_at.py  c32_analytics_signals.py  c33_correlations_and_alerts.py  c34_eval_runs_and_results.py  c35a_retrieval_feedback.py  c36a_gap_reports.py  c36b_review_sessions_recon_columns.py  c36c_ontology_versions_segment_id.py  c37a_recon_dr_schedules.py  c37b_apscheduler_jobs.py  c37c_recon_divergence_maps.py  c37d_recon_dr_reports.py  c38a_change_directives.py  c38b_change_directive_state_transitions.py  c38c_change_directive_evidence_criteria.py  c38d_change_directive_realization_snapshots.py  c39a_change_directive_snapshot_metrics_columns.py  c3d4e5f6a7b8_create_mine_samples_table.py  c40a_decomposition_runs.py  c41a_segmentation_maps.py  c41b_decomposition_runs_layer5_layer6.py  c42a_permission_matrices.py  c42b_permission_drift_queue.py  c42c_permission_hypothesis_runs.py  c42d_hypothesis_one_running.py  c43a_sensitivity_reports.py  c44a_elicitation_agent_id.py  (+35 more)
config/: agent_daemon.yaml  calibration.yaml  change_executor.yaml  correlation_engine.yaml  corroboration_config.yaml  cq_templates.yaml  decay_config.yaml  decomposition.yaml  discovery-manifest.json  discovery.yaml  eval_config.yaml  extraction_router.yaml  federation.yaml  permissions.yaml  proposal_generator.yaml  seed_registry.json  sensitivity_rules.yaml  signal_pipeline.yaml  snapshot_pipeline.yaml  triage_rules.yaml  voice_tone_config.yaml
config/connectors/: synthetic_mapping.yaml
docker/: docker-compose.arcade.yml  docker-compose.observability.yml
docker/prometheus/: prometheus.yml
docs/: GrACE-Onboarding-Setup-Manual.md  GrACE-Product.md  test-suite-allowlist.md
docs/runbooks/: README.md  agent-orchestrated-extraction.md  dependency-lockfile-migration.md  first-boot.md  image-ingestion.md  operator-first-chunk-walkthrough.md  pytest-db-safety.md  remote-access.md  reviewer-provider-recovery.md  voice-card-export.md
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx  providers.tsx
frontend/tests/: AccessPatternBar.test.tsx  DriftQueueRow.test.tsx  EvidenceBundleSummary.test.tsx  PermissionMatrixRatifyDialog.test.tsx  RoleClusterCard.test.tsx  RoleClusterMemberCardSort.test.tsx  RoleClusterMemberMoveMenu.test.tsx  airgap-save-roundtrip.test.tsx  airgap-toggle.test.tsx  api-client-decomposition.test.ts  api-client.test.ts  audit-toast.test.tsx  backend-recovery.test.tsx  card-sort-canvas.test.tsx  card-sort-instrument.test.tsx  certainty-legend.test.tsx  change-directive-authoring-form.test.tsx  change-directives-copy.test.ts  chat-panel-close-phase.test.tsx  chat-store.test.ts  claim-list.test.tsx  claim-review-panel.test.tsx  claim-span-renderer.test.tsx  close-summary.test.tsx  connection-test-result.test.tsx  cq-authoring-form.test.tsx  cq-candidates-banner.test.tsx  cq-canvas.test.tsx  cq-card.test.tsx  cq-impact-preview.test.tsx  cq-link-overlay.test.tsx  cq-query-hooks.test.ts  custom-path-field.test.tsx  decision-confirm-dialog.test.tsx  decomposition-detail.test.tsx  decomposition-page.test.tsx  disposition-bar.test.tsx  ec4-guard.test.ts  edge-detail-panel.test.tsx  edit-and-accept-form.test.tsx  (+69 more)
frontend/types/: cytoscape-extensions.d.ts
grace-claude-skills/: README.md  module-test-roadmap.md
grace-claude-skills/grace-auto-accept/: SKILL.md
grace-claude-skills/grace-corpus-export/: SKILL.md
grace-claude-skills/grace-correlation-probe/: SKILL.md
grace-claude-skills/grace-cq-authoring/: SKILL.md
grace-claude-skills/grace-gap-remediation-harness/: SKILL.md
grace-claude-skills/grace-graph-extraction/: SKILL.md
grace-claude-skills/grace-ingestion-harness/: SKILL.md
grace-claude-skills/grace-intent-elicitation/: SKILL.md
grace-claude-skills/grace-ontology-proposal/: SKILL.md
grace-claude-skills/grace-property-detailing/: SKILL.md
grace-claude-skills/grace-regeneration-probe/: SKILL.md
grace-claude-skills/grace-retrieval-probe/: SKILL.md
grace-claude-skills/grace-review-protocol/: SKILL.md
grace-claude-skills/grace-signal-probe/: SKILL.md
grace-claude-skills/grace-testing-protocol/: SKILL.md
grace-claude-skills/references/: cq-authoring-method.md  data-contracts.md  workflow-pipeline.md
grace-claude-skills/scripts/: _common.py  apply_golden_gate.py  apply_probe.py  auto_accept.py  seed_gaps.py  (+32 more)
scripts/: check-api-contract.sh  check-migration-revision-ids.sh  check-no-numeric-scores.sh  check-no-third-party.sh  check-regeneration-unchanged.sh  check-retrieval-unchanged.sh  claude_desktop_config.example.json  issue.py  regeneration_query.py  set-api-key.sh  smoke-live-server.sh
tests/: conftest.py  test_cli_import_smoke.py  test_no_bare_get_event_loop.py  test_no_raw_ann_distance.py  test_raw_sql_column_contract.py
(+1343 files in other folders)
