[project]
name = "grace"
version = "0.1.0"
description = "Graph as Auditable Context Engine"
requires-python = ">=3.14"

dependencies = [
    # --- Core framework ---
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "starlette==0.52.1",
    "python-multipart==0.0.26",
    "sse-starlette==3.3.4",
    # --- Pydantic ecosystem ---
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pydantic-yaml==1.6.0",
    "pydantic-rdf==0.2.0",
    "pydantic_core==2.41.5",
    # --- Database / ORM / Migrations ---
    "SQLAlchemy==2.0.48",
    "psycopg2-binary==2.9.11",
    "alembic==1.18.4",
    # --- HTTP client ---
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "httpcore==1.0.9",
    # --- LLM / AI ---
    "instructor==1.15.1",
    "openai==2.29.0",
    # F-53 (validation run, 2026-07-02): the documented deploy default is
    # Claude-as-the-LLM (config/discovery.yaml provider: anthropic), and
    # instructor's Anthropic mode + AnthropicProvider both require the
    # `anthropic` package — but it was never declared, so a fresh checkout
    # crashed on the first real extraction ("The anthropic package is required").
    "anthropic==0.115.1",
    "sentence-transformers==5.3.0",
    "transformers==4.57.6",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "safetensors==0.7.0",
    "accelerate==1.13.0",
    # --- Document processing ---
    "docling==2.80.0",
    "docling-core==2.70.2",
    "docling-ibm-models==3.12.0",
    "docling-parse==5.6.0",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
    "pypdfium2==5.6.0",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    # --- RDF / Ontology ---
    "rdflib==7.6.0",
    # --- Graph / Clustering / ML ---
    "hdbscan==0.8.41",
    "numpy==2.4.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "umap-learn==0.5.12",
    "python-igraph==0.11.9",
    "igraph==0.11.9",
    "numba==0.65.1",
    # --- BM25 / Search ---
    "bm25s==0.3.2.post1",
    # --- Signal pipeline ---
    "pymannkendall==1.4.3",
    # --- NLP ---
    "pysbd==0.3.4",
    "python-dateutil==2.9.0.post0",
    "sentencepiece==0.2.1",
    "semchunk==3.2.5",
    # --- Schema diffing ---
    "deepdiff==8.6.2",
    "jsonpatch==1.33",
    # --- Observability ---
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "opentelemetry-instrumentation==0.61b0",
    "opentelemetry-instrumentation-asgi==0.61b0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-semantic-conventions==0.61b0",
    "opentelemetry-util-http==0.61b0",
    "prometheus_client==0.25.0",
    # --- Logging ---
    "structlog==25.5.0",
    # --- MCP ---
    "mcp==1.27.0",
    # --- APScheduler ---
    "APScheduler==3.11.2",
    # --- Email / ingestion adapters ---
    "aioimaplib==1.2.0",
    "google-api-python-client==2.196.0",
    "google-auth==2.53.0",
    "google-auth-httplib2==0.4.0",
    "google-auth-oauthlib==1.4.0",
    # --- Misc runtime ---
    "typer==0.21.2",
    "click==8.3.1",
    "PyYAML==6.0.3",
    "Jinja2==3.1.6",
    "python-dotenv==1.2.2",
    "rich==14.3.3",
    "tabulate==0.9.0",
    "cryptography==46.0.7",
    "sqlglot==30.6.0",
    "regex==2026.2.28",
    "tqdm==4.67.3",
    "Pillow==12.1.1",
    "ruamel.yaml==0.18.17",
    "huggingface_hub==0.36.2",
    "filelock==3.25.2",
    "packaging==26.0",
    "certifi==2026.1.4",
    "idna==3.11",
    "urllib3==2.6.3",
    "requests==2.32.5",
    "six==1.17.0",
    "typing_extensions==4.15.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "sniffio==1.3.1",
    "h11==0.16.0",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    # --- Darwin-only (Apple Silicon / Docling VLM) ---
    "mlx==0.31.1; sys_platform == 'darwin'",
    "mlx-metal==0.31.1; sys_platform == 'darwin'",
    "pyobjc-core==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-CoreML==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Vision==12.1; sys_platform == 'darwin'",
    "ocrmac>=1.0.0,<2.0; sys_platform == 'darwin'",
    # Required by Pydantic EmailStr fields (src/ingestion/models.py Recipient).
    # Previously undeclared — clean venvs failed to import src.api.main.
    "email-validator==2.3.0",
    # Runtime dep for the Outlook .msg adapter (src/ingestion/adapters/msg_adapter.py,
    # D418). Previously undeclared — clean venvs skipped/failed the msg-adapter tests.
    "python-oxmsg==0.0.2",
    # ONNX Runtime CPU — required by RapidOCR on non-Darwin (D499 image-OCR).
    # CPU-only variant; no CUDA dependency (R2 mitigation, D138 airgap preserved).
    "onnxruntime>=1.16.0",
    "nltk>=3.9.4",
    "mail-parser-reply>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-repeat==0.9.4",
    "pytest-rerunfailures==16.1",
    "pytest-xdist==3.8.0",
    "deepeval==3.9.2",
    "hypothesis==6.152.4",
    "Faker==40.11.0",
    "polyfactory==3.3.0",
    # Test-only: tests/discovery/test_document_processor.py builds a sample PDF.
    "fpdf2==2.8.7",
]

docs = []

crawl = [
    "crawl4ai>=0.8.6,<1.0",
]

[tool.uv]
# crawl4ai 0.8.6 pins lxml<6 but docling 2.80.0 requires lxml>=6.0.
# Override allows both extras to coexist; crawl4ai works with lxml 6.x in practice.
override-dependencies = [
    "lxml>=5.3",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
